# simple-haskell-wit.ai

./: Makefile  README.md  simple-witai.cabal  stack.yaml
app/: Actions.hs  Main.hs
app/Actions/: GetForecast.hs
spec/: Spec.hs
src/Network/: Wit.hs
src/Network/Wit/: Backend.hs  Types.hs
