name:                simple-witai
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/simple-witai#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  exposed-modules:      Network.Wit
                      , Network.Wit.Backend
                      , Network.Wit.Types
  build-depends:        base
                      , wreq
                      , aeson
                      , lens-aeson
                      , lens
                      , text
                      , containers
                      , map-syntax
                      , bytestring
                      , unordered-containers
                      , vector
                      , transformers
                      , mtl
                      , http-types

executable cli
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:         base 
                       , simple-witai
                       , aeson
                       , lens-aeson
                       , lens
                       , text
                       , containers
                       , map-syntax
                       , bytestring
                       , unordered-containers
                       , vector
                       , transformers
                       , mtl
                       , hashable
                       , random

test-suite simple-witai-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:         base
                       , simple-witai
                       , hspec
                       , lens
                       , aeson
                       , text
                       , unordered-containers

